--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -77,6 +77,10 @@
             margin: 5px;
             max-width: 560px;
 
+            &:hover{
+                box-shadow: 0 0 25px rgba(0,0,0,0.1);
+            }
+
             .petPic img{
                 width: 100px;
             }
