--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -32,6 +32,9 @@
 
             input{
                 margin-bottom: 5px;
+                &.ng-invalid{
+                    border: 1px solid $error-color;
+                }
             }
 
             .input-group {
