--- a/src/app/components/newpet/newpet.component.html
+++ b/src/app/components/newpet/newpet.component.html
@@ -39,7 +39,7 @@
                     <div class="col-6">
                         <p>Gênero: </p>
                         <select name="Gênero" class="form-control" [(ngModel)]="selectedGender" [ngModelOptions]="{standalone: true}"> 
-                            <option>Selecione</option>
+                            <option  selected>Selecionedasdas</option>
                             <option>Fêmea</option>
                             <option>Macho</option>
                         </select>
