--- a/src/app/components/newschedule/newschedule.component.html
+++ b/src/app/components/newschedule/newschedule.component.html
@@ -24,6 +24,8 @@
                     [(ngModel)]="schedule.description" [ngModelOptions]="{standalone: true}"
                     />
                 
+                    <ngb-timepicker [(ngModel)]="time" [ngModelOptions]="{standalone: true}"></ngb-timepicker>
+
                 <input placeholder="Local"
                        [(ngModel)]="schedule.place" [ngModelOptions]="{standalone: true}"
                     />
