--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="schedule-info col-md-7 col-lg-9">
             <ul  class="col-12">
-                <li  class="col-sm-12 col-md-12 col-lg-6" *ngFor="let schedule of scheduleAux; let i as index;" (click)="setDay(schedule.day)">
+                <li  class="col-sm-12 col-md-12 col-lg-12 col-xl-6" *ngFor="let schedule of scheduleAux; let i as index;" (click)="setDay(schedule.day)">
                     <div>
                         <div class="schedule-field">
                             <strong><i class="far fa-calendar-alt"></i>Data: </strong>
@@ -41,6 +41,7 @@
                         </div>
                         <div class="schedule-field">
                             <strong><i class="far fa-clock"></i>Horário: </strong>
+                            {{ schedule.hour}}:{{ schedule.minute }}
                             <p></p>
                         </div>
                         <div class="schedule-field">
