--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -72,7 +72,7 @@
         ul{
             display: flex;
             flex-wrap: wrap;
-            padding: 0;
+            padding: 0 15px;
             li{
                 display: block;
                 padding: 15px;
@@ -229,8 +229,22 @@
         .schedule-info{
             overflow: none;
             ul{
+                padding: 0 15px 0 45px;
                 li{
                     display: block;
+                    max-width: none;
+                }
+            }
+        }
+    }
+}
+@media only screen and (min-width: $break-xl){
+    .schedule-container {
+        .schedule-info {
+            overflow: none;
+            ul {
+                padding: 0 15px;
+                li{
                     max-width: 400px;
                 }
             }
