Ajustes de layout na agenda

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -3,6 +3,7 @@
 .login-container{
     flex-direction: column-reverse;
     height: auto;
+    margin-bottom: 40px;
     
     section.form{
         width: auto;
