--- a/src/app/components/newpet/newpet.component.html
+++ b/src/app/components/newpet/newpet.component.html
@@ -3,7 +3,7 @@
         <div class="content">
             <section class="col-lg-6">
                 <div class="pet-photo">
-                    <img src="{{ pet.photo_link }}"/>
+                    <img class="new-photo" src="{{ pet.photo_link }}"/>
                 </div>
                 <div class="button-photo">
                     <button color="warn" (click)="onClick()">  
