--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -100,6 +100,21 @@
                 &:hover{
                     box-shadow: 0 0 25px rgba(0,0,0,0.1);
                 }
+                .schedule-options{
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 15px 0px 5px 0px; //15px 15px 5px 0px;
+                    button{
+                        border: none;
+                        background-color: unset;
+                        i{
+                            color: $detail-color;
+                            &:hover{
+                                color: #a54ecb;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
@@ -185,21 +200,33 @@
             ul{ 
                 overflow: auto;
                 padding: 0 15px 0 0;
-                li{
-                    .schedule-field{
-                        display: flex;
-                        margin-bottom: 5px;
-                        p{
-                            margin: 0 5px;
-                        }
-                        i{
-                            width: 15px;
-                            text-align: center;
-                            margin-right: 5px;
+                li{ 
+                    div {
+                        margin-bottom: 20px;
+                        .schedule-field{
+                            display: flex;
+                            margin-bottom: 5px;
+                            p{
+                                margin: 0 5px;
+                            }
+                            i{
+                                width: 15px;
+                                text-align: center;
+                                margin-right: 5px;
+                            }
                         }
                     }
                     &:hover{
                         box-shadow: 0 0 25px rgba(0,0,0,0.1);
+                    }
+                    .schedule-options{
+                        position: absolute;
+                        right: 0;
+                        display: flex;
+                        flex-flow: column-reverse;
+                        top: 0;
+                        height: 85%;
+                        margin-right: 15px;
                     }
                 }
             }
